--- a/style.css
+++ b/style.css
@@ -78,6 +78,10 @@ main {
   background-color: var(--light-bg);
   border: 0.5rem solid var(--shadow);
 }
+canvas {
+  width: inherit; height: inherit;
+  background-color: transparent;
+}
 #projectile {
   width: 1rem; height: 1rem;
   top: 80rem; left: 0rem;
