--- a/style.css
+++ b/style.css
@@ -80,6 +80,9 @@ main {
 }
 canvas {
   width: inherit; height: inherit;
+  top: 0; left: 0;
+  position: relative;
+  z-index: 8;
   background-color: transparent;
 }
 #projectile {
