--- a/style.css
+++ b/style.css
@@ -78,10 +78,11 @@ main {
   background-color: var(--light-bg);
   border: 0.5rem solid var(--shadow);
 }
-canvas {
+canvas, #field {
   width: inherit; height: inherit;
-  top: 0; left: 0;
-  position: relative;
+  top: 0; left: 50%;
+  transform: translateX(-50%);
+  position: absolute;
   z-index: 8;
   background-color: transparent;
 }
