--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ canvas, #field {
   position: absolute;
   z-index: 8;
   background-color: transparent;
+  border: 0.5rem solid transparent;
 }
 #projectile {
   width: 1rem; height: 1rem;
