--- a/style.css
+++ b/style.css
@@ -142,9 +142,34 @@ canvas, #field {
   transform: translate(-50%, -50%);
   transition: border 0.4s 0.1s;
 }
+#launcher {
+  width: 3rem; height: 6rem;
+  top: 73rem; left: 0;
+  position: relative;
+  z-index: 8;
+  //background-image: url(launcher.svg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  transition: transform 0.5s;
+}
 
-#controls {
-  width: 140rem; height: auto;
+#controlsBlock {
+  width: 90rem; height: auto;
+  z-index: 15;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 1.5rem;
+  background-color: var(--dark-bg);
+}
+.controls {
+  height: 9rem;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
+#fire {
+  margin-bottom: 3rem;
 }
