--- a/style.css
+++ b/style.css
@@ -281,13 +281,11 @@ canvas, #field, #electro, #magnetic {
 .confetti {
   width: 4rem; height: 4rem;
   position: absolute;
-  opacity: 0;
+  top: -5rem; opacity: 0;
   animation: 5s confettiFlight linear forwards;
 }
 @keyframes confettiFlight {
-  from {top: 0;}
-  10% {opacity: 1;}
-  85% {opacity: 1;}
+  90% {opacity: 1;}
   to {top: calc(100vh - 5rem); opacity: 0;}
 }
 
