--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ html[data-theme="dark"] {
   --a: 0.5;
   --color: white;
 }
-html[data-theme="dark"] .icon {
-  //filter: invert();
+html[data-theme="light"] .icon {
+  filter: invert();
 }
 html {
   overflow: hidden auto;
@@ -151,7 +151,7 @@ canvas, #field, #electro, #magnetic {
   width: 1rem; height: 1rem;
   top: 80rem; left: 0rem;
   position: relative;
-  background-color: var(--color);
+  background-color: white;
   border-radius: 50%;
   transform: translate(-50%, -50%);
   transition: top 100ms linear, left 100ms linear;
