Add english translation

--- a/style.css
+++ b/style.css
@@ -234,7 +234,7 @@ canvas, #field, #electro, #magnetic {
 }
 .coverBox {
   width: 45rem; height: 20rem;
-  margin-bottom: 2rem;
+  margin: 1rem 0 2rem 0;
   display: flex;
   justify-content: center;
   align-items: center;
